# omibi-vivo-be

./: .env.example  .gitignore  Cargo.toml  docker-compose.yml
.sqlx/: query-09d1e0e3dbeed2bcb35250900a18d6620f0d102cd171e09a14e1ec39c365ec76.json  query-c41c577988ed7e1fc3db5f682545d809d6b0110fe7d074ac89891bac48126a26.json  query-df10dd4fb600ccb65b8224e8201c22289f2958cf90333a9131656fa51769d832.json
migrations/: 20260307070125_create_projects.sql  20260307071844_alter_id_projects.sql  20260307081325_add_timestamps_to_projects.sql  20260307082924_alter_project_timestamp.sql  20260308073306_alter_project_table_field.sql  20260308075229_alter_project_add_final_url.sql  20260308084752_create_tts_audio_table.sql  20260308085833_drop_tts_audio_table.sql  20260308090007_create_tts_audios_table.sql  20260308090431_alter_tts_audios_field.sql  20260308161109_alter_tts_audios_require_text.sql  20260421133425_create_audio_merge_jobs_table.sql  20260421140000_create_project_segments_table.sql
scripts/: run.sh
src/: app.rs  lib.rs  main.rs
src/common/: response.rs  types.rs
src/config/: database.rs
src/dto/: mod.rs
src/handlers/: audio_merge_handler.rs  mod.rs  projects_handler.rs  tts_audio_handler.rs
src/infra/: rabbitmq.rs
src/messaging/: mod.rs  tts_complete_consumer.rs  tts_consumer.rs  tts_error_consumer.rs  tts_publisher.rs
src/models/: audio_merge_job.rs  mod.rs  project.rs  project_segment.rs  segment.rs  tts_audio.rs  tts_job.rs  tts_message.rs
src/repositories/: audio_merge_job_repository.rs  mod.rs  project_repository.rs  (+1 more)
tts-service/: .dockerignore  .gitignore  README.md  config.yaml  pyproject.toml  pyproject.toml.gpu  requirements.txt
(+58 files in other folders)
