[package]
name = "ominihub-vivoice"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
validator = { version = "0.18", features = ["derive"] }

sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "chrono"
] }

chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"

# use lapin to connect rabbitmq
lapin = "2"
futures-lite = "2"

dotenvy = "0.15"