[package]
name = "ominihub-vivoice"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
validator = { version = "0.18", features = ["derive"] }

sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "chrono"
] }

# Required for shared configuration and credentials
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
# The S3 service-specific SDK
aws-sdk-s3 = "1.129.0"

chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"

# use lapin to connect rabbitmq
lapin = "2"
futures-lite = "2"

tokio-util = { version = "0.7", features = ["io"] }

reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1", features = ["v4"] }

dotenvy = "0.15"
futures = "0.3.32"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
